# Besplatno-Compiler

./: CMakeLists.txt  README.md  main.cpp
examples/: test.cpp
examples/asts/: Eratosthen.txt  Factorial.txt  Inheritance.txt
examples/programs/: Bug1.opl  EratosthenesSieve.opl  Factorial.opl  Fibonacci.opl  Inheritance.opl  Std(no generics).opl  Std.opl  StdHeaders.opl  While.opl
src/codegen/: codegen.cpp  codegen.h  standardLibrary.cpp  standardLibrary.h
src/lex/: lex.cpp  lex.l  lex.l.cpp  lex.l.h  lexicalAnalyzer.h  reamd.md  scanner.cpp  scanner.h  scanner.l  token.h
src/semantic/: semAnalyzer.cpp  semAnalyzer.h
src/stl/: Std.opl  std.c  std.ll
src/syntax/: ast.cpp  ast.h  astPrinter.h  parser.cpp  parser.h  parser.tab.h  parser.y
